--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 #-------------------------------
 # General Site Settings
-title: Norlin
+title: NONODE
 logo: # You can add own logo. For example '/images/logo.png'.
-description: Norlin – A Beautiful Dark Blog Theme for Jekyll.
+description: NONODE - Personal site of Pavel Necas.
 baseurl: "" # The subpath of your site, e.g. /blog
 url: "" # The base hostname & protocol for your site, e.g. http://example.com
 
@@ -10,15 +10,15 @@ url: "" # The base hostname & protocol for your site, e.g. http://example.com
 #-------------------------------
 # Author Settings
 author:
-  name: Robert Wilson
+  name: Pavel Necas
   avatar: '/images/15.jpg'
 
 
 #-------------------------------
 # Hero Settings
 hero:
-  title: Robert Wilson
-  description: Thoughts, stories and ideas.
+  title: Pavel Necas
+  description: My projects, thoughts, and ideas.
   image: '/images/01.jpg'
 
 
@@ -70,7 +70,8 @@ permalink: pretty
 plugins:
   - jekyll-paginate
   - jekyll-sitemap
-  - jekyll/tagging
+#  - jekyll/tagging
+
 
 paginate: 8
 paginate_path: "/page/:num"
