--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ title: NONODE
 logo: # You can add own logo. For example '/images/logo.png'.
 description: NONODE - Personal site of Pavel Necas.
 baseurl: "" # The subpath of your site, e.g. /blog
-url: "" # The base hostname & protocol for your site, e.g. http://example.com
+url: "http://nonode.dev" # The base hostname & protocol for your site, e.g. http://example.com
 
 
 #-------------------------------
@@ -18,14 +18,14 @@ author:
 # Hero Settings
 hero:
   title: Pavel Necas
-  description: My projects, thoughts, and ideas.
+  description: My projects, thoughts, and R&D.
   image: '/images/01.jpg'
 
 
 #-------------------------------
 # Contact Settings
 contact:
-  email: your@email.com # Add your email for contact form
+  email: pavel@nonode.dev # Add your email for contact form
   description: Norlin comes with a built-in contact form, that you can use with Formspree service to handle up to 50 submissions per month for free. You could also easily switch to another contact form service if you want. # Add a description of your form
 
 # NOTE
@@ -54,7 +54,7 @@ disqus-identifier: anvodstudio-demo # Add your shortname for Disqus Comment. For
 
 #-------------------------------
 # Google Analytics
-google-analytics: # Add your identifier. For example UA-99631805-1.
+google-analytics: G-610B5SJ5H3 # Add your identifier. For example UA-99631805-1.
 
 
 #-------------------------------
