--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ author:
 hero:
   title: Pavel Necas
   description: My projects, thoughts, and R&D.
-  image: '/images/01.jpg'
+  image: '/images/backgrounds/bg-1.jpg'
 
 
 #-------------------------------
