Updated hero plus changed analytics

--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ url: "http://nonode.dev" # The base hostname & protocol for your site, e.g. http
 # Author Settings
 author:
   name: Pavel Necas
-  avatar: '/images/15.jpg'
+  avatar: '/images/about/about-1.jpg'
 
 
 #-------------------------------
@@ -54,7 +54,7 @@ disqus-identifier: anvodstudio-demo # Add your shortname for Disqus Comment. For
 
 #-------------------------------
 # Google Analytics
-google-analytics: G-610B5SJ5H3 # Add your identifier. For example UA-99631805-1.
+google-analytics: "G-610B5SJ5H3" # Add your identifier. For example UA-99631805-1.
 
 
 #-------------------------------
