Correected image names

--- a/_config.yml
+++ b/_config.yml
@@ -54,7 +54,7 @@ disqus-identifier: anvodstudio-demo # Add your shortname for Disqus Comment. For
 
 #-------------------------------
 # Google Analytics
-google-analytics: "G-610B5SJ5H3" # Add your identifier. For example UA-99631805-1.
+google-analytics: G-610B5SJ5H3 # Add your identifier. For example UA-99631805-1.
 
 
 #-------------------------------
