--- a/_config.yml
+++ b/_config.yml
@@ -25,8 +25,8 @@ hero:
 #-------------------------------
 # Contact Settings
 contact:
-  email: pavel@nonode.dev # Add your email for contact form
-  description: Norlin comes with a built-in contact form, that you can use with Formspree service to handle up to 50 submissions per month for free. You could also easily switch to another contact form service if you want. # Add a description of your form
+  email: f/xpzelroq # Add your email for contact form
+  description: Because of spam bots, please send me message through here and I will get back to asap! # Add a description of your form
 
 # NOTE
 # Norlin theme comes with a contact form built-in. You can use this form with Formspree (https://formspree.io/) service and get up to 50 submissions for free. Also, you can easily switch to another service if you want.
