--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ hero:
 # Contact Settings
 contact:
   email: f/xpzelroq # Add your email for contact form
-  description: Because of spam bots, please send me message through here and I will get back to asap! # Add a description of your form
+  description: Because of spam bots, please send me message through here and I will get back to asap! Or you can use this pavel (at & at) nonode . dev .  # Add a description of your form
 
 # NOTE
 # Norlin theme comes with a contact form built-in. You can use this form with Formspree (https://formspree.io/) service and get up to 50 submissions for free. Also, you can easily switch to another service if you want.
@@ -37,14 +37,14 @@ contact:
 # Example of adding a new link to the footer - {icon: "ion-logo-github", link: "https://github.com"}
 # Other icons can be found at https://ionicons.com/v4/
 social:
-- {icon: "ion-logo-twitter", link: "https://twitter.com"}
-- {icon: "ion-logo-facebook", link: "https://facebook.com"}
-- {icon: "ion-logo-dribbble", link: "https://dribbble.com"}
-- {icon: "ion-logo-instagram", link: "https://instagram.com"}
-- {icon: "ion-logo-pinterest", link: "https://pinterest.com"}
-- {icon: "ion-logo-youtube", link: "https://youtube.com"}
-- {icon: "ion-logo-github", link: "https://github.com"}
-- {icon: "ion ion-logo-vimeo", link: "https://vimeo.com/"}
+# - {icon: "ion-logo-twitter", link: "https://twitter.com"}
+# - {icon: "ion-logo-facebook", link: "https://facebook.com"}
+# - {icon: "ion-logo-dribbble", link: "https://dribbble.com"}
+# - {icon: "ion-logo-instagram", link: "https://instagram.com"}
+# - {icon: "ion-logo-pinterest", link: "https://pinterest.com"}
+- {icon: "ion-logo-youtube", link: "https://www.youtube.com/channel/UCbjAhPuKCbcNuSiPArQujiA"}
+- {icon: "ion-logo-github", link: "https://github.com/Pavelioso/"}
+# - {icon: "ion ion-logo-vimeo", link: "https://vimeo.com/"}
 
 
 #-------------------------------
