--- a/_config.yml
+++ b/_config.yml
@@ -71,7 +71,7 @@ plugins:
   - jekyll-paginate
   - jekyll-sitemap
 #  - jekyll/tagging
-  - jekyll-tagging
+#  - jekyll-tagging
 
 paginate: 8
 paginate_path: "/page/:num"
