--- a/_config.yml
+++ b/_config.yml
@@ -19,8 +19,8 @@ author:
 hero:
   title: Pavel Nečas
   description: > 
-    Unreal Developer and Generalist, Problem Solver, Programmer. Welcome! 
-    Place where I post my projects. Some large, some small. 
+    Game Producer and Unreal Generalist, Problem Solver, Programmer. Welcome! 
+    Place where I post my ideas and projects. Some large, some small. 
     My Discord is Pavelios 4451. 
   image: '/images/backgrounds/bg-1.jpg'
 
