--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ author:
 hero:
   title: Pavel Nečas
   description: > 
-    Game Producer and Unreal Generalist, Problem Solver, Programmer. Welcome! 
+    Game Producer and Unreal Generalist, Problem Solver, Immersive Experiences Creator. Welcome! 
     Place where I post my ideas and projects. Some large, some small. 
     My Discord is Pavelios 4451. 
   image: '/images/backgrounds/bg-1.jpg'
