--- a/_config.yml
+++ b/_config.yml
@@ -73,8 +73,8 @@ permalink: pretty
 plugins:
   - jekyll-paginate
   - jekyll-sitemap
-#  - jekyll/tagging
-#  - jekyll-tagging
+  - jekyll/tagging
+  - jekyll-tagging
 
 paginate: 15
 paginate_path: "/page/:num"
