gamedev hero update

--- a/_config.yml
+++ b/_config.yml
@@ -29,9 +29,7 @@ hero:
 gamedev:
   title: My Gamedev Journey
   description: > 
-    Game Producer and Unreal Generalist, Problem Solver, Immersive Experiences Creator. Welcome! 
-    Place where I post my ideas and projects. Some large, some small. 
-    My Discord is Pavelios 4451. 
+    These are some of my gamedev works. I've released one indie game called Expedition Zero, and I've included here some of my VR projects aswell. 
 
 
 
